# catalyze

./: .taplo.toml  Cargo.toml  README.md  buf.yaml  code_generator_request.rs  commented.rs  expanded.rs  kitchen-code-generator-request  mod.rs  rustfmt.toml  spike.proto  tmp.proto
catalyze/: Cargo.toml
catalyze/src/: access.rs  ast.rs  container.rs  enum.rs  enum_value.rs  error.rs  extension.rs  field.rs  file.rs  fqn.rs  generator.rs  lib.rs  location.rs  message.rs  method.rs  node.rs  oneof.rs  package.rs  service.rs  test.rs  uninterpreted_option.rs
catalyze/src/ast/: access.rs  collection.rs  container.rs  dependency.rs  dependent.rs  enum.rs  enum_.rs  enum_value.rs  extension.rs  extension_block.rs  extension_decl.rs  field.rs  file.rs  hydrate.rs  import.rs  index.rs  iter.rs  location.rs  map_try_into_usize.rs  message.rs  method.rs  node.rs  oneof.rs  package.rs  path.rs  reference.rs  reserved.rs  resolve.rs  service.rs  table.rs  uninterpreted.rs  value.rs
catalyze/src/field/: embed_field.rs  enum_field.rs  map_field.rs  oneof_field.rs  repeated_field.rs  scalar_field.rs
fixtures/cgr/commented/: code_generator_request.txt
fixtures/cgr/extended/: code_generator_request.txt
fixtures/cgr/resolution/no_package/: code_generator_request.txt
fixtures/protos/commented/: commented.proto
fixtures/protos/extended/: extended_file.proto
fixtures/protos/kitchen/: kitchen.proto  sink.proto
fixtures/protos/resolution/no_package/: dependent_proto3.proto  from_root.proto
fixtures/protos/simple_ext/: extensions.proto
fixtures/protos/spike/: spike.proto
protoc-gen-debug/: Cargo.toml  README.md
protoc-gen-debug/src/: main.rs
