[package]
description = "wip"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "catalyze"
version     = "0.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ahash     = "0.8.7"
indexmap  = "2.1.0"
inherent  = "1.0"
itertools = "0.12.0"
protobuf  = "3.3.0"
slotmap   = "1.0.7"
snafu     = "0.8"
